[gd_scene load_steps=8 format=2]

[ext_resource path="res://juego7/script/principal.gd" type="Script" id=1]
[ext_resource path="res://assets/pause_black.png" type="Texture" id=2]
[ext_resource path="res://juego7/images/fondo_game6.jpg" type="Texture" id=3]
[ext_resource path="res://assets/pause.png" type="Texture" id=4]
[ext_resource path="res://tipografias/Candal.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/forward.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 22
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="principal" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="tiempo" type="Timer" parent="."]
one_shot = true

[node name="label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 512.0
margin_top = 224.0
margin_right = 536.0
margin_bottom = 251.0
custom_fonts/font = SubResource( 1 )
text = "2"

[node name="label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 176.0
margin_top = 160.0
margin_right = 596.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 1 )
text = "Â¿Con cuantas cartas desea jugar?"

[node name="boton_jugar" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 344.0
margin_top = 272.0
margin_right = 387.0
margin_bottom = 292.0
icon = ExtResource( 6 )
flat = true

[node name="cantidad" type="HSlider" parent="."]
modulate = Color( 0.321569, 0.933333, 0.321569, 1 )
self_modulate = Color( 0.615686, 0.831373, 0.67451, 1 )
light_mask = 511
use_parent_material = true
margin_left = 240.0
margin_top = 236.0
margin_right = 477.0
margin_bottom = 252.0
min_value = 2.0
max_value = 16.0
step = 2.0
value = 2.0

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 680.0
margin_right = 730.0
margin_bottom = 50.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )

[node name="Screen" type="CanvasLayer" parent="."]

[connection signal="pressed" from="boton_jugar" to="." method="_on_boton_jugar_pressed"]
[connection signal="value_changed" from="cantidad" to="." method="_on_cantidad_value_changed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
